# jaxon

./: MANIFEST.in  README.rst  environment.yml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_tests.yml
docs/: conf.py  index.rst
docs/jaxon/: api.rst
jaxon/: __init__.py  continuum.py  hatp7.py  lightcurve.py  model.py  nort.py  nortinh.py  planets.py  reflected.py  spectrum.py  thermal.py  tp.py  utils.py
jaxon/data/: nea_transiting.csv  rotation_table.pkl
