[metadata]
name = jaxon
author = Brett M. Morris
author_email = morrisbrettm@gmail.com
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/bmorris3/jaxon
description = Phase curve models in JAX
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.5
setup_requires = setuptools_scm
install_requires = 



[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    sphinx
    sphinx-automodapi

[options.package_data]
jaxon = data/*

[tool:pytest]
testpaths = "jaxon" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  jaxon/__init*
  jaxon/conftest.py
  jaxon/*setup_package*
  jaxon/tests/*
  jaxon/*/tests/*
  jaxon/extern/*
  jaxon/version*
  */jaxon/__init*
  */jaxon/conftest.py
  */jaxon/*setup_package*
  */jaxon/tests/*
  */jaxon/*/tests/*
  */jaxon/extern/*
  */jaxon/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
